Fixed background color overflow not extending past visible window

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,6 @@
-.fullpage {
+.full-width {
     height: 100%;
     width: 100%;
     background-color: #efebe9;
+    overflow: auto;
 }
-
-
-/* html {
-    height: 100%;
-    width: 100%;
-    background-color: #efebe9;
-} */
